Fixed bugs with edit buttons layout and tasks container displaying when it shouldn't

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         
         <div class="todo-tasks" data-list-display-container>
             <div class="tasks-header">
-                <h2 class="list-name" data-list-title>First list</h2>
-                <p class="task-count" data-list-count>3 tasks remaining</p>
+                <h2 class="list-name" data-list-title></h2>
+                <p class="task-count" data-list-count></p>
             </div>
 
             <div class="tasks-body">
@@ -46,10 +46,11 @@
                     </form>
                 </div>
 
-                <div class="edit-tasks">
-                    <button class="btn delete" data-clear-complete-tasks-btn>Clear completed tasks</button>
-                    <button class="btn delete" data-delete-list-btn>Delete list</button>
-                </div>
+            </div>
+
+            <div class="edit-tasks">
+                <button class="btn delete" data-clear-complete-tasks-btn>Clear completed tasks</button>
+                <button class="btn delete" data-delete-list-btn>Delete list</button>
             </div>
         </div>
 
